adding improvments and console for demonstration