@@ -4,9 +4,11 @@ import com.login.gymcrm.dao.TrainingDao;
 import com.login.gymcrm.model.Training;
 import com.login.gymcrm.service.exception.EntityNotFoundException;
 import com.login.gymcrm.service.exception.ValidationException;
-import com.login.gymcrm.util.IdGenerator;
+import com.login.gymcrm.util.UuidGenerator;
+import org.apache.commons.lang3.StringUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDate;
@@ -17,13 +19,13 @@ public class TrainingService {
     private static final Logger log = LoggerFactory.getLogger(TrainingService.class);
 
     private TrainingDao trainingDao;
-    private IdGenerator idGenerator;
+    private UuidGenerator idGenerator;
 
     public Training createTraining(String traineeId, String trainerId, String name, LocalDate date, int durationMinutes) {
-        if (traineeId == null || traineeId.isBlank() || trainerId == null || trainerId.isBlank()) {
+        if (StringUtils.isBlank(traineeId) || StringUtils.isBlank(trainerId)) {
             throw new ValidationException("Trainee and Trainer ids are required");
         }
-        if (name == null || name.isBlank()) {
+        if (StringUtils.isBlank(name)) {
             throw new ValidationException("Training name is required");
         }
         if (date == null) {
@@ -41,7 +43,7 @@ public class TrainingService {
     }
 
     public Training selectTraining(String id) {
-        if (id == null || id.isBlank()) {
+        if (StringUtils.isBlank(id)) {
             throw new ValidationException("Training id is required for select");
         }
         return trainingDao.findById(id)
@@ -52,13 +54,13 @@ public class TrainingService {
         return trainingDao.findAll();
     }
 
-    @org.springframework.beans.factory.annotation.Autowired
+    @Autowired
     public void setTrainingDao(TrainingDao trainingDao) {
         this.trainingDao = trainingDao;
     }
 
-    @org.springframework.beans.factory.annotation.Autowired
-    public void setIdGenerator(IdGenerator idGenerator) {
+    @Autowired
+    public void setIdGenerator(UuidGenerator idGenerator) {
         this.idGenerator = idGenerator;
     }
 }
